[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/Class/AnimationButtonClass.gd" type="Script" id=1]
[ext_resource path="res://Script/ScriptGridEx/Nodes/AreaVector.gd" type="Script" id=2]
[ext_resource path="res://Scene/Resource/Vector.tscn" type="PackedScene" id=3]

[node name="AreaVector" type="GraphNode"]
margin_right = 342.0
margin_bottom = 80.0
mouse_filter = 1
title = "AreaVector"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 3
slot/0/left_color = Color( 0.482353, 1, 0.537255, 1 )
slot/0/right_enabled = true
slot/0/right_type = 3
slot/0/right_color = Color( 0.482353, 1, 0.537255, 1 )
slot/1/left_enabled = false
slot/1/left_type = 3
slot/1/left_color = Color( 0.482353, 1, 0.537255, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 10.0
margin_top = 21.0
margin_right = 342.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Hbox" type="HBoxContainer" parent="Panel"]
margin_left = 3.0
margin_top = 5.0
margin_right = 329.0
margin_bottom = 107.0

[node name="Size" type="HBoxContainer" parent="Panel/Hbox"]
margin_right = 168.0
margin_bottom = 102.0

[node name="Tittle" type="Label" parent="Panel/Hbox/Size"]
margin_top = 41.0
margin_right = 40.0
margin_bottom = 61.0
text = "Size"

[node name="Vector_Size" parent="Panel/Hbox/Size" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_right = 168.0
margin_bottom = 102.0

[node name="Model" type="HBoxContainer" parent="Panel/Hbox"]
margin_left = 172.0
margin_top = 39.0
margin_right = 326.0
margin_bottom = 63.0
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="Tittle" type="Label" parent="Panel/Hbox/Model"]
margin_top = 2.0
margin_right = 50.0
margin_bottom = 22.0
text = "Model"

[node name="Model_value" type="OptionButton" parent="Panel/Hbox/Model"]
margin_left = 54.0
margin_right = 154.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "Plane"
items = [ "Plane", null, false, 0, null, "Cube", null, false, 1, null ]
selected = 0
script = ExtResource( 1 )

[node name="Division" type="PanelContainer" parent="."]
visible = false
margin_left = 10.0
margin_top = 123.0
margin_right = 342.0
margin_bottom = 215.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Hbox" type="HBoxContainer" parent="Division"]
margin_left = 3.0
margin_top = 5.0
margin_right = 329.0
margin_bottom = 85.0

[node name="Division" type="HBoxContainer" parent="Division/Hbox"]
margin_right = 326.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tittle" type="Label" parent="Division/Hbox/Division"]
margin_top = 30.0
margin_right = 80.0
margin_bottom = 50.0
text = "Division"

[node name="Vector_Division" parent="Division/Hbox/Division" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_right = 326.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="X" parent="Division/Hbox/Division/Vector_Division" index="0"]
margin_right = 242.0
margin_bottom = 24.0

[node name="x" parent="Division/Hbox/Division/Vector_Division/X" index="0"]
margin_bottom = 24.0

[node name="X" parent="Division/Hbox/Division/Vector_Division/X" index="1"]
margin_right = 242.0
margin_bottom = 24.0
value = 1.0

[node name="Y" parent="Division/Hbox/Division/Vector_Division" index="1"]
margin_top = 28.0
margin_right = 242.0
margin_bottom = 52.0

[node name="y" parent="Division/Hbox/Division/Vector_Division/Y" index="0"]
margin_bottom = 24.0

[node name="Y" parent="Division/Hbox/Division/Vector_Division/Y" index="1"]
margin_right = 242.0
margin_bottom = 24.0
value = 1.0

[node name="Z" parent="Division/Hbox/Division/Vector_Division" index="2"]
margin_top = 56.0
margin_right = 242.0
margin_bottom = 80.0

[node name="z" parent="Division/Hbox/Division/Vector_Division/Z" index="0"]
margin_bottom = 24.0

[node name="Z" parent="Division/Hbox/Division/Vector_Division/Z" index="1"]
margin_right = 242.0
margin_bottom = 24.0
value = 1.0

[connection signal="from_value" from="." to="." method="_on_AreaVector_from_value"]
[connection signal="item_selected" from="Panel/Hbox/Model/Model_value" to="." method="_on_Model_item_selected"]

[editable path="Division/Hbox/Division/Vector_Division"]
